# coreBS

./: .gitignore  CMakeLists.txt  README.md
obs-plugin/: CMakeLists.txt  README.md
obs-plugin/data/locale/: en-US.ini
obs-plugin/scripts/: prepare-local-obs-sdk.ps1
obs-plugin/src/: ProcessFinder.cpp  ProcessFinder.h  Utils.cpp  Utils.h  WindowCaptureSource.cpp  WindowCaptureSource.h  WindowFinder.cpp  game-capture-source.cpp  game-capture-source.h  plugin-main.cpp
src/: AudioCapture.cpp  AudioCapture.h  ProcessFinder.cpp  ProcessFinder.h  Recorder.cpp  Recorder.h  SignalHandler.cpp  SignalHandler.h  Utils.cpp  Utils.h  VideoCapture.cpp  VideoCapture.h  WindowFinder.cpp  WindowFinder.h  main.cpp
